<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_dlg_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TableRow>

        <TextView
            style="@style/DetailDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_dlg_approval_time" />

        <TextView
            android:id="@+id/detail_dlg_approval_time"
            style="@style/DetailDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/DetailDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_dlg_place" />

        <TextView
            android:id="@+id/detail_dlg_place"
            style="@style/DetailDialogText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/DetailDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_dlg_price" />

        <TextView
            android:id="@+id/detail_dlg_price"
            style="@style/DetailDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/DetailDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_dlg_category" />

        <TextView
            android:id="@+id/detail_dlg_category"
            style="@style/DetailDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

</TableLayout>