<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_ace"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edit_card_title"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/edit_card_image"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="3dp" />

        <TextView
            android:id="@+id/edit_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edit_card_menu"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_payment_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:padding="20dp"
            android:text="@string/edit_payment_day"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/edit_payment_day_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:gravity="right"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edit_card_menu"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="20dp"
            android:text="@string/edit_card_type"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/edit_card_type_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:gravity="right"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edit_card_menu"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_t_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:clickable="true"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/edit_t_amount"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/edit_t_amount_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:gravity="right"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>